Added CIELab class, which converts spaces to LAB. Added deltaE  methods

--- a/app/src/main/res/layout/activity_dressing_circles_colouranalysis.xml
+++ b/app/src/main/res/layout/activity_dressing_circles_colouranalysis.xml
@@ -145,5 +145,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/bandage_mock_up" />
+
+        <TextView
+            android:id="@+id/textViewDeltaEFromQR"
+            android:layout_marginBottom="4dp"
+            android:layout_width="match_parent"
+            android:layout_height= "wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            />
     </LinearLayout>
 </ScrollView>
