--- a/app/src/main/res/layout/fragment_yourdata.xml
+++ b/app/src/main/res/layout/fragment_yourdata.xml
@@ -149,9 +149,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/colorPrimaryCUSTOM"
+        android:backgroundTint="@color/colorAccentCUSTOM"
         android:text="Logout"
-        android:textColor="@color/white"
+        android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
