--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,6 +15,39 @@
 
         </android.support.constraint.ConstraintLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/bottom_nav"
+            android:weightSum="3">
+
+                <View
+                    android:id="@+id/homeview"
+                    android:layout_height="5dip"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:visibility="gone"
+                    android:background="@color/white" />
+                <View
+                    android:id="@+id/monitorview"
+                    android:layout_height="5dip"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:visibility="gone"
+                    android:background="@color/white" />
+                <View
+                    android:id="@+id/yourdataview"
+                    android:layout_height="5dip"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:visibility="gone"
+                    android:background="@color/white" />
+
+        </LinearLayout>
+
+
+
+
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottom_nav"
             android:layout_width="match_parent"
