--- a/app/src/main/res/layout/activity_process_image.xml
+++ b/app/src/main/res/layout/activity_process_image.xml
@@ -130,6 +130,26 @@
             android:background="@color/colorAccentCUSTOM"
             android:visibility="gone" />
 
+        <ImageView
+            android:id="@+id/imgviewDrawCirclesOnCorners1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="30dp"/>
+        <ImageView
+            android:id="@+id/imgviewDrawCirclesOnCorners2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="30dp"/>
+        <ImageView
+            android:id="@+id/imgviewDrawCirclesOnCorners3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="30dp"/>
+        <ImageView
+            android:id="@+id/imgviewDrawCirclesOnCorners4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="30dp"/>
 
         <ImageView
             android:id="@+id/imgview2"
@@ -159,6 +179,118 @@
             android:text="OpenCV Analysis"
             android:textColor="@color/white"
             android:textSize="16sp" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="15dip"
+            android:background="@color/colorAccentCUSTOM"
+            />
+
+        <TextView
+            android:id="@+id/textViewC1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            android:text="Circle1 cropped:" />
+
+        <TextView
+            android:id="@+id/textViewC1hm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            />
+
+        <ImageView
+            android:id="@+id/imageViewC1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bandage_mock_up" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="15dip"
+            android:background="@color/colorAccentCUSTOM"
+            />
+
+        <TextView
+            android:id="@+id/textViewC2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            android:text="Circle2 cropped:" />
+
+        <TextView
+            android:id="@+id/textViewC2hm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            />
+
+        <ImageView
+            android:id="@+id/imageViewC2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bandage_mock_up" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="15dip"
+            android:background="@color/colorAccentCUSTOM"
+            />
+
+        <TextView
+            android:id="@+id/textViewC3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            android:text="Circle3 cropped:" />
+
+        <TextView
+            android:id="@+id/textViewC3hm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            />
+
+        <ImageView
+            android:id="@+id/imageViewC3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bandage_mock_up" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="15dip"
+            android:background="@color/colorAccentCUSTOM"
+            />
+
+        <TextView
+            android:id="@+id/textViewC4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            android:text="Circle4 cropped:" />
+
+        <TextView
+            android:id="@+id/textViewC4hm"
+            android:layout_width="match_parent"
+            android:layout_height= "wrap_content"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            />
+
+        <ImageView
+            android:id="@+id/imageViewC4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bandage_mock_up" />
 
     </LinearLayout>
 
