--- a/app/src/main/res/layout/activity_process_image.xml
+++ b/app/src/main/res/layout/activity_process_image.xml
@@ -46,7 +46,7 @@
             android:text="" />
 
         <ImageView
-            android:id="@+id/imgview"
+            android:id="@+id/imgViewOriginal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="30dp"/>
@@ -131,20 +131,35 @@
             android:visibility="gone" />
 
         <ImageView
+            android:id="@+id/imgviewWarpedAndAffineTransformation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="30dp"/>
+
+        <ImageView
+            android:id="@+id/imgviewAffineTransformation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="30dp"/>
+
+        <ImageView
             android:id="@+id/imgviewDrawCirclesOnCorners1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="30dp"/>
+
         <ImageView
             android:id="@+id/imgviewDrawCirclesOnCorners2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="30dp"/>
+
         <ImageView
             android:id="@+id/imgviewDrawCirclesOnCorners3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="30dp"/>
+
         <ImageView
             android:id="@+id/imgviewDrawCirclesOnCorners4"
             android:layout_width="wrap_content"
