--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_margin="5dp"
             android:id="@+id/backToMenu"
             style="@style/Widget.MaterialComponents.FloatingActionButton"
@@ -32,12 +32,12 @@
             android:textSize="32sp"
             />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/TitleHistory"
-            android:padding="4dp"></android.support.v7.widget.RecyclerView>
+            android:padding="4dp"></androidx.recyclerview.widget.RecyclerView>
 
     </RelativeLayout>
 
