--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,12 +66,12 @@
             android:textColor="@color/white"
             android:textSize="24sp" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/historyTitle"
-        android:padding="4dp"></android.support.v7.widget.RecyclerView>
+        android:padding="4dp"></androidx.recyclerview.widget.RecyclerView>
 
     </RelativeLayout>
 </ScrollView>
