--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textviewCamera"
         app:layout_constraintVertical_bias="0.369" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button2"
         style="@style/Widget.MaterialComponents.FloatingActionButton"
         android:layout_width="wrap_content"
@@ -62,4 +62,4 @@
         app:layout_constraintVertical_bias="0.675"
         app:srcCompat="@drawable/ic_camera_alt_black_24dp" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
