--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
+    tools:context=".activities.LoginAndRegisterActivities.RegisterActivity"
     android:background="@color/colorPrimaryDarkCUSTOM">
 
     <TableLayout
@@ -52,6 +52,27 @@
                     android:textColor="@android:color/white"
                     android:textColorHint="@android:color/white" />
             </TableRow>
+
+           <!-- <TableRow>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    boxStrokeWidth="5dp"
+                    boxStrokeColor ="@color/colorPrimaryCUSTOM"
+                    android:hint="Last Name"
+                    android:textColorHint="@color/white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editLName1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                     />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </TableRow>-->
 
             <TableRow>
 
