--- a/app/src/main/res/layout/activity_analysis_submission.xml
+++ b/app/src/main/res/layout/activity_analysis_submission.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDarkCUSTOM"
-    tools:context=".AnalysisSubmissionActivity">
+    tools:context=".activities.ImageProcessingActivities.AnalysisSubmissionActivity">
 
     <TextView
         android:id="@+id/textViewFeedbackHeading"
