--- a/app/src/main/res/layout/activity_process_image.xml
+++ b/app/src/main/res/layout/activity_process_image.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProcessImageActivity"
+    tools:context=".activities.ImageProcessingActivities.ProcessImageActivity"
     android:background="@color/colorPrimaryDarkCUSTOM">
 
     <LinearLayout
