--- a/app/src/main/res/layout/activity_registered_dressings.xml
+++ b/app/src/main/res/layout/activity_registered_dressings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDarkCUSTOM"
-    tools:context=".RegisteredDressingsActivity">
+    tools:context=".activities.MainActivities.RegisteredDressingsActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
