--- a/app/src/main/res/layout/activity_reminders.xml
+++ b/app/src/main/res/layout/activity_reminders.xml
@@ -27,6 +27,13 @@
         android:textSize="32sp"
         />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/TitleRegistered"
+        android:padding="4dp"></androidx.recyclerview.widget.RecyclerView>
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
