--- a/app/src/main/res/layout/recycler_item_reminder.xml
+++ b/app/src/main/res/layout/recycler_item_reminder.xml
@@ -36,21 +36,72 @@
             <TableRow
                 android:layout_marginBottom="3dp"
                 android:layout_marginTop="3dp">
+
                 <TextView
-                    android:id="@+id/textView__"
+                android:id="@+id/textViewTimestamp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Timestamp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                />
+            </TableRow>
+
+            <TableRow
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp">
+                <TextView
+                    android:id="@+id/textViewLocation"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Time"
+                    android:text="Location"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/white"
                     android:textSize="14sp"
                     />
+            </TableRow>
 
-                <Switch
-                    android:id="@+id/switch1"
-                    android:layout_width="wrap_content"
+            <TableRow
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp">
+                <TextView
+                    android:id="@+id/alarmView1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Switch" />
+                    android:text="This dressing has not been analysed yet."
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    />
+            </TableRow>
+
+            <TableRow
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp">
+                <TextView
+                    android:id="@+id/alarmView2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    />
+            </TableRow>
+
+            <TableRow
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp">
+                <TextView
+                    android:id="@+id/alarmView3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    />
             </TableRow>
 
         </TableLayout>
