--- a/app/src/main/res/layout/recycler_item_reminder.xml
+++ b/app/src/main/res/layout/recycler_item_reminder.xml
@@ -21,10 +21,11 @@
             android:id="@+id/qridTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:text="QR ID"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/white"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <TableLayout
             android:id="@+id/table1"
