Used Firebase Auth to improve sessions

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,10 @@
     <color name="colorPrimaryDarkCUSTOM">#232F34</color>
     <color name="colorAccentCUSTOM">#F9AA33</color>
 
+    <!--<color name="colorPrimaryDarkCUSTOM">#f7f7f7</color>
+    <color name="colorPrimaryCUSTOM">#facb2f</color>
+    <color name="colorAccentCUSTOM">#333000</color>-->
+
     <!--<color name="colorPrimaryCUSTOM">#ffffff</color>
     <color name="colorPrimaryDarkCUSTOM">#A0522D</color>
     <color name="colorAccentCUSTOM">#FFD700</color>-->
